# DxGPT-Benchmarking

./: .cursorrules  .gitignore  01_dataset.py  02_model_azure.py  03_evaluation.py  README.md  config.py  hugging.py  pyproject.toml  requirements.txt  run.py  run_latitude_benchmark.py  testing_severity_assignment_batching.py
bench/: README.md
bench/candidate-prompts/: dxgpt-prompt.txt
bench/datasets/: RAMEDIS.json  ramedis-45.json
bench/experiments/DxGPT_baseline/: README.md  run.py
bench/experiments/ramedis_baseline/: PLOTING_README.md  README.md  config.yaml  run.py  visualize_results.html  visualize_results.py
bench/pipeline/: README.md  config.yaml  run.py
bench/pipeline/eval-prompts/: candidate_output_schema.json
bench/pipeline/results/: README.md
data29/: README.md
data29/data-repos/raw/: more.txt  ukranian.csv
data29/health-checker/: README.md  analyze.py  config.yaml
data29/health-checker/outputs/: RAMEDIS_icd10_analysis.html  urg_torre_icd10_analysis.html
data29/raw/: more.txt  ukranian.csv
data29/urg_torre & ramedis_bench/current-data/: stats_new.py
etc/: run_latitude_benchmark.py
libs/ease_llm/: README.md  pyproject.toml
libs/ease_llm/ease_llm/: __init__.py  llm_call_config_loader.py
libs/ease_llm/ease_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
logs/: full_evaluation_20250606_184759.jsonl  full_evaluation_20250606_185006.jsonl  full_evaluation_20250606_185244.jsonl
scorers/: synonym_judge_prompt.txt
src/: 01_data_loader.py  02_model_azure.py  03_evaluation_runner.py  EVALUATION_README.md  evaluate.py  mini-test.csv
src/EaseLLM/: YAML_CONFIG_GUIDE.md  ease_llm_client.py
src/configs/: default_config.yaml
src/core/: __init__.py  config.py  registry.py  session.py
src/datasets/: mini-test.csv
src/evaluators/: __init__.py  semantic.py  severity.py
src/prompts/: dxgpt_prompt.yaml  synonym_judge_prompt.yaml
src/visualizations/: __init__.py  combined_viz.py  semantic_viz.py  visualizer.py
tests/: README.md
utils/: README.md  __init__.py
utils/bert/: README.md  __init__.py  bert_similarity.py
utils/icd10/: README.md  __init__.py  taxonomy.py
utils/llm/: README.md  __init__.py  azure.py  base.py  hugging.py
(+207 files in other folders)
